--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-  <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
-
+<div class="main">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
