--- a/src/app/docs/docs.component.html
+++ b/src/app/docs/docs.component.html
@@ -1,3 +1,70 @@
-<p>
-  docs works!
-</p>
+<div class="container">
+    <div class="header d-flex justify-content-end align-items-center">
+        <div class="text-header mr-5">
+          <h2 class="text-center d-none d-md-flex">Documentação Necessária</h2>
+        </div>
+      </div>
+      
+  <p class="m-5">Para que o processo possa ser submetido para aprovação é necessária a seguinte
+      documentação:</p>
+
+  <div class="text-doc">
+    <div class="list-group mb-1" *ngFor="let d of docList">
+      <div *ngIf="d.recebido==1" class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between" style="width:100%">
+          <a *ngIf="d.recebido==1" routerLink="/show" [queryParams]="{lead: d.lead, ln: d.linha}"
+            class="list-group-item list-group-item-action d-flex justify-content-between  d-flex align-items-center">
+            <div>{{d.nomedoc}}<br/><small>{{d.descricao}}</small></div>
+            <span class="fa fa-check text-success" *ngIf="d.recebido==1"> </span>
+          </a>
+        </div>
+        <div class="flex-1 d-flex align-content-stretch" *ngIf="d.status==8 || d.status==21 || d.status==37"
+          title="Anexar outro ficheiro para este documento!">
+          <a *ngIf="d.recebido==1" class="list-group-item list-group-item-action d-flex align-items-center"
+            routerLink="/capture" [queryParams]="{lead: d.lead, linha: d.linha}">
+            <span class="fa fa-plus text-info text-center"><small> </small></span>
+          </a>
+        </div>
+      </div>
+      <a *ngIf="d.recebido==0" href="#" class="list-group-item list-group-item-action" routerLink="/capture"
+        [queryParams]="{lead: d.lead, linha: d.linha}">
+        <div style="width:82%">{{d.nomedoc}}<br/><small>{{d.descricao}}</small> </div>
+        <span class="fa fa-upload text-info pull-right"><small> Anexar</small></span>
+      </a>
+    </div>
+    <div class="text-center mt-3">
+      <button class="btn btn-outline-warning" routerLink="/">Finalizar</button>
+    </div>
+  </div>
+
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="anexarModal" tabindex="-1" role="dialog" aria-labelledby="anexar" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Anexar Documento</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h6 class="text-info">{{docSelected.nomedoc}}</h6>
+        <p>Instruções:</p>
+        <p><small>Deverá selecionar um documento no formato PDF e que tenha um tamanho inferior a 4Mbytes.
+            Caso não tenha o documento em PDF poderá usar o este <a href="https://smallpdf.com/pt"
+              __target="blanck">link</a> para o converter, facilmente e sem custos.
+          </small></p>
+        <input name="docToUpload" type="file" accept="pdf/*" ngModel
+          (change)="handleInputChange($event, docSelected )" />
+        <div class="alert alert-danger" *ngIf="erro"><small>{{erro}}</small></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" [disabled]="erro || !loaded" data-dismiss="modal"
+          (click)="confirmaAnexar()">Confirmar</button>
+      </div>
+    </div>
+  </div>
+</div>
