--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,30 +1,31 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/" routerLinkActive="active current">
-    <img src='./assets/img/logo_email_xs.png' alt="Gestlifes"/>
+<nav *ngIf="isLoggedIn()" class="navbar navbar-expand-lg navbar-inner">
+  <a class="navbar-brand" [routerLink]="redirectTo()" routerLinkActive="active current">
+    <img src='./assets/img/logo_email_sm.png' style="height: 35px" alt="Gestlifes"/>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon text-center" style="font-size:xx-small;color:black; text-decoration: none">MENU </span> 
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse mt-3" id="navbarNav">
+      <ul class="navbar-nav mr-auto" *ngIf="isLoggedIn()">
+        <!-- <ul class="navbar-nav mr-auto" *ngIf="isLoggedIn() && redirectTo()=='/'"> -->
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/" routerLinkActive="active">Processo <span class="sr-only">)</span></a>
+          <a *ngIf="status < 10 || status==36 || status==37" class="nav-link small text-uppercase" routerLink="/form" routerLinkActive="active current"><i class="fa fa-briefcase" aria-hidden="true"></i> Processo</a>
+          <a *ngIf="status >= 10 && status!=36 && status!=37" class="nav-link small text-uppercase" routerLink="/" routerLinkActive="active current"><i class="fa fa-briefcase" aria-hidden="true"></i> Processo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/docs" routerLinkActive="active">Documentação</a>
+        <a class="nav-link small text-uppercase" routerLink="/docs" routerLinkActive="active current"><i class="fa fa-file" aria-hidden="true"></i> Documentação</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/info" routerLinkActive="active">Pessoal</a>
+        <a class="nav-link small text-uppercase" routerLink="/faq" routerLinkActive="active current"><i class="fa fa-question" aria-hidden="true"></i> FAQs</a>
       </li> 
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item small text-uppercase" routerLinkActive="active">
        <a *ngIf="isLoggedIn()" class="nav-link" routerLink="/change" title="Click para alterar dados de acesso">
            <i class="fa fa-user"></i> {{loginName}}</a>     
       </li>
      <li class="nav-item">
-    <!--    <a *ngIf="!isLoggedIn()" class="nav-link" routerLink="/login"><i class="fa fa-sign-in"></i> Entrar</a> -->
-        <a *ngIf="isLoggedIn()" class="nav-link" (click)="logout()" routerLink="/login" title="Click para sair">
+        <a *ngIf="isLoggedIn()" class="nav-link  small text-uppercase" (click)="logout()" routerLink="/login" title="Click para sair">
           <i class="fa fa-sign-out"></i>Sair</a>
       </li>
   </ul>
